modified for choosable presents

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 			<div class="possibilities">
 				<div class="row hero">
 					<p>A kialakult helyzetre való tekintettel az idei szülihét kicsit szerényebb lehetőségekkel kecsegtet, de így is szuper lesz! <p>
-				</div>									
+					<p>Ajándékot <a href=".\present.html">itt</a> tudsz választani</p>
+				</div>							
 				<div class="row">
 					<div class="col span-1-of-2">
 						<div>
